...
                    <color key="separatorColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <connections>
                        <outlet property="dataSource" destination="-1" id="LIQ-I7-Pja"/>
                        <outlet property="delegate" destination="-1" id="cAB-Cg-T4z"/>
                    </connections>
                </tableView>
                <searchBar contentMode="redraw" searchBarStyle="prominent" placeholder="Search city" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uEi-2u-A62">
                    <rect key="frame" x="0.0" y="103" width="393" height="50"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="50" id="FTb-yv-o4g"/>
                    </constraints>
                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
